--- a/index.html
+++ b/index.html
@@ -6,16 +6,25 @@
         <title>Red Store Inc</title>
         <script src="https://kit.fontawesome.com/d45606caa0.js" crossorigin="anonymous"></script>
     </head>
-    <body>
-     <header>
-       <div >             
-          <nav id="menu">                   
-          <a href="index.html"> <img src="media/Practica store HTML-1.jpg" alt="Logo de Red Store"></a>                   
-           <div>             
-             <input type="text" id="search" placeholder=" ¿Que desea comprar?">
-             <i class="fas fa-search" id="iconsearch"></i>   
-             <i class="fas fa-shopping-cart" id="iconshop"></i>                     
-           </div>              
+<body>
+  <header>
+    <div >             
+       <nav id="menu">                   
+       <a href="index.html"> <img src="media/Practica store HTML-1.jpg" alt="Logo de Red Store"></a> 
+       <ul class="box-search">
+         <li><a href="#">lavadoras </a></li>
+         <li><a href="#">estufas   </a></li>
+         <li><a href="#">nike      </a></li>
+         <li><a href="#">adidas    </a></li>
+         <li><a href="#">taladro   </a></li>
+         <li><a href="#">desarmadores</a></li>
+       </ul>                   
+   <div>             
+   <input type="text" id="search" placeholder=" ¿Que desea comprar?">
+   <i class="fas fa-search" id="iconsearch"></i>   
+   <i class="fas fa-shopping-cart" id="iconshop"></i>
+                      
+   </div>              
                 <ul class="submenu">                                       
                   <li> <a href="#"> Categorias </a>                      
                        <ul class="submenu1">
