no se puede jajaja

--- a/registro.html
+++ b/registro.html
@@ -28,11 +28,11 @@
                 </div>
                 <div>
                     <label for="envio" ></label>
-                    <input type="submit"value="ENVIAR" class="button">
+                    <input type="submit"value="ENVIAR" id="enviar" class="button">
                 </div>
                 <p>Al registrarte aceptas nuestros terminos y condiciones de uso. ¿Ya tienes una cuenta? <a href="/login.html"> Iniciar sesion </a> </p>    
             </form>
-           
+           <script src="js/codigo.js"></script>
         </body>
 
 
