codigo js validacion formulario de login

--- a/login.html
+++ b/login.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="css/registro.css">   
  </head>
  <body>
+     <div class="loginlogo">
+         <a href="index.html"><img src="media/Practica store HTML-1.jpg" alt="Logo Red Store"></a>
+     </div>
     <form id=formulario>
         <h1>INICIAR SESION</h1>                     
         </div>
@@ -25,7 +28,7 @@
             <label for="envio" ></label>
             <input type="submit"value="INICIAR SESION" class="button">
         </div>
-        <p>Al registrarte aceptas nuestros terminos y condiciones de uso. ¿No tienes una cuenta? <a href="/registro.html" > Registrate </a> </p>    
+        <p class="terminos">Al registrarte aceptas nuestros <a href="#">terminos y condiciones de uso.</a> ¿No tienes una cuenta? <a href="/registro.html" > Registrate </a> </p>    
 
     </form>
  </body>
