agregando nuevas imagenes

--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
  </head>
  <body>
      <div class="loginlogo">
-         <a href="index.html"><img src="media/Practica store HTML-1.jpg" alt="Logo Red Store"></a>
+         <a href="index.html"><img src="media/redstore.jpg" alt="Logo Red Store"></a>
      </div>
     <form id=formulario>
         <h1>INICIAR SESION</h1>                     
