--- a/registro.html
+++ b/registro.html
@@ -9,6 +9,9 @@
             <title>Registro Usuario</title>
         </head>
         <body>
+            <div class="loginlogo">
+                <a href="index.html"><img src="media/redstore.jpg" alt=""></a>
+            </div>
             <form id="formulario">
                 <h1>REGISTRATE</h1>
 
