se agrega codigo para login

--- a/registro.html
+++ b/registro.html
@@ -46,7 +46,7 @@
                 <p class="terminos">Al registrarte <a href="">aceptas nuestros terminos y condiciones de uso.</a>  ¿Ya tienes una cuenta? <a href="/login.html"> Iniciar sesion </a> </p>
                 <p class="mensajeError"></p>    
             </form>
-           <script src="js/codigo.js"></script>
+           <script src="js/register.js"></script>
         </body>
 
 
