hay vamos aprendiendo

--- a/registro.html
+++ b/registro.html
@@ -36,6 +36,13 @@
                     <p  class="mensajeError"></p> 
                 </div>
 
+                <div class="input-contenedor contraseña2">                  
+                    <label for="contraseña"></label>
+                    <i class="fas fa-lock icon"></i>
+                    <input type="password" id="contraseña2"  placeholder="Repetir Contraseña">
+                    <p  class="mensajeError"></p> 
+                </div>
+
                 <div>
                     <label for="envio" ></label>
                     <input type="submit"value="ENVIAR" id="enviar" class="button">
