--- a/login.html
+++ b/login.html
@@ -11,29 +11,30 @@
      <div class="loginlogo">
          <a href="index.html"><img src="media/redstore.jpg" alt="Logo Red Store"></a>
      </div>
-    <form id=formulario>
+     
+    <form id="formulario">
         <h1>INICIAR SESION</h1>                     
         </div>
         <div class="input-contenedor correo">                  
             <label for="correo"></label>
             <i class="fas fa-envelope-square icon"></i>
             <input type="email" id="correo" Placeholder="Correo Electronico">
-            <p class="mensajeDeError"></p>      
+            <p class="mensajeloginError"></p>      
         </div>
         <div class="input-contenedor contraseña">                  
             <label for="contraseña"></label>
             <i class="fas fa-lock icon"></i>
             <input type="password" id="contraseña"  placeholder="Contraseña">
-            <p class="mensajeDeError"></p> 
+            <p class="mensajeloginError"></p> 
         </div>
         <div>
             <label for="envio" ></label>
             <input type="submit"value="INICIAR SESION" id="sesion" class="button">
         </div>
         <p class="terminos">Al registrarte aceptas nuestros <a href="#">terminos y condiciones de uso.</a> ¿No tienes una cuenta? <a href="/registro.html" > Registrate </a> </p> 
-        <script src="js/login.js"></script>   
-
+        
     </form>
+    <script src="js/login.js"></script> 
  </body>
 
 
