se agregan elementos media

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li> <a href="#"> Categorias </a>                      
     <ul class="submenu1">
     <li><a href="Electronicos.html">  Electronicos       </a></li>
-    <li><a href="#">  Electrodomesticos  </a></li>
+    <li><a href="Electrodomesticos.html">  Electrodomesticos  </a></li>
     <li><a href="#">  Ropa y Zapatos     </a></li>
     <li><a href="#">  Musica       </a></li>
     <li><a href="#">  Herramientas </a></li>
@@ -47,7 +47,7 @@
         
            <div id="principal"></div> 
               <footer id="reserved">
-                 <h5>Aviso de Privacidad Red Store Inc. 2020-2021 Todos los derechos reservados</h5> 
+                 <h5>Aviso de Privacidad Red Store Inc. 2020-2022 Todos los derechos reservados</h5> 
               </footer>
         </div>
      </header>
