--- a/Electronicos.html
+++ b/Electronicos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/productos.css">
     <script src="https://kit.fontawesome.com/d45606caa0.js" crossorigin="anonymous"></script>
     <title>Electronicos</title>
@@ -27,7 +28,7 @@
          <li> <a href="#"> Categorias </a>                      
          <ul class="submenu1">
          <li><a href="Electronicos.html">  Electronicos       </a></li>
-         <li><a href="#">  Electrodomesticos  </a></li>
+         <li><a href="Electrodomesticos.html">  Electrodomesticos  </a></li>
          <li><a href="#">  Ropa y Zapatos     </a></li>
          <li><a href="#">  Musica       </a></li>
          <li><a href="#">  Herramientas </a></li>
