tratando de poner links

--- a/Adidas.html
+++ b/Adidas.html
@@ -44,6 +44,7 @@
               </Ul>
               </li>                    
         </ul>
+        <div><p>ESTA SECCION ES UNICA DE ADIDAS</p></div>
                                                   
               </nav>
              
