--- a/Electrodomesticos.html
+++ b/Electrodomesticos.html
@@ -21,8 +21,7 @@
         <i class="fas fa-search" id="iconsearch"></i>   
         <i class="fas fa-shopping-cart" id="iconshop"></i>                      
         </div> 
-        <ul id="boxsearch">    
-        </ul>  
+        <a href="#"></a> <ul id="boxsearch">  </ul></a>  
            
          <ul class="submenu">                                       
          <li> <a href="#"> Categorias </a>                      
@@ -51,6 +50,7 @@
                 <div id="Electrodomesticos"></div>
                 <div id="Licuadora"></div> 
                 <div id="Plancha"></div>
+
                    <footer id="reserved">
                       <h5>Aviso de Privacidad Red Store Inc. 2020-2022 Todos los derechos reservados</h5> 
                    </footer>
