--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
    <i class="fas fa-search" id="iconsearch"></i>   
    <i class="fas fa-shopping-cart" id="iconshop"></i>                      
    </div> 
-   <ul id="boxsearch">    
+   <ul id="boxsearch">
+      <li><a href="Adidas"> Adidas</a></li>
+      <li><a href="">Almohada</a></li>
+      <li><a href="">Audifonos</a></li>
+      <li><a href="">Cafetera</a></li>
+      <li><a href="">Cnc</a></li>
    </ul>  
       
     <ul class="submenu">                                       
