se remplazan imagenes

--- a/login.html
+++ b/login.html
@@ -7,7 +7,10 @@
   <title>Login</title> 
   <link rel="stylesheet" href="css/registro.css">   
  </head>
+
+ 
  <body>
+     <header>
      <div class="loginlogo">
          <a href="index.html"><img src="media/redstore.jpg" alt="Logo Red Store"></a>
      </div>
@@ -31,10 +34,12 @@
             <label for="sesion" ></label>
             <input type="submit"value="INICIAR SESION" id="sesion" class="button">
         </div>
+        <div id="login"></div> 
         <p class="terminos">Al registrarte aceptas nuestros <a href="#">terminos y condiciones de uso.</a> ¿No tienes una cuenta? <a href="/registro.html" > Registrate </a> </p> 
         
     </form>
-   <script src="js/login.js"></script> 
+   <script src="js/login.js"></script>
+ </header>
  </body>
 
 
