Seguimos con el problema en JavaScrip de los enlaces al encontrar un producto

--- a/Adidas.html
+++ b/Adidas.html
@@ -44,7 +44,7 @@
               </Ul>
               </li>                    
         </ul>
-        <div><p>ESTA SECCION ES UNICA DE ADIDAS</p></div>
+        <div class="adidas"><p>ESTA SECCION ES UNICA DE ADIDAS</p></div>
                                                   
               </nav>
              
