--- a/registro.html
+++ b/registro.html
@@ -1,4 +1,4 @@
-<DOCTYPE hyml>
+<DOCTYPE html>
     <html lang="es">
         <head>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
             </div>
 
             
-            <form id="formulario">
+            <form id="formulario" action="Validation" method="post">
                 <h1>REGISTRATE</h1>
 
                 <div class="input-contenedor nombre">                  
