--- a/Almohadas.html
+++ b/Almohadas.html
@@ -21,7 +21,8 @@
         <i class="fas fa-search" id="iconsearch"></i>   
         <i class="fas fa-shopping-cart" id="iconshop"></i>                      
         </div> 
-        <ul id="boxsearch"></ul>  
+         <ul id="boxsearch">
+        </ul>  
            
          <ul class="submenu">                                       
          <li> <a href="#"> Categorias </a>                      
