agregando media querys

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
    <i class="fas fa-search" id="iconsearch"></i>   
    <i class="fas fa-shopping-cart" id="iconshop"></i>                      
    </div> 
-   <ul id="boxsearch">    
-      
+   <ul id="boxsearch">  
+       <li ><a href="Adidas.html">  Adidas</a></li>  
+       <li ><a href="Almohadas">    Almohadas</a></li>       
+       <li ><a href="#">            Audifonos</a></li>
    </ul>  
       
     <ul class="submenu">                                       
